[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/UI_themes/main_menu.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/main_menu_background_placeholder.jpg" type="Texture" id=3]
[ext_resource path="res://assets/UI/button_notPressed.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Gobold.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/UI/tick_notPressed.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/tick_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/slider_notPressed.png" type="Texture" id=9]
[ext_resource path="res://assets/UI/slider_pressed.png" type="Texture" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 150, 15 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 150, 15 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 150, 15 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 150, 15 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="TextureRectBackground" type="TextureRect" parent="."]
self_modulate = Color( 0.286275, 0.286275, 0.286275, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 3 )

[node name="Container" type="Container" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -62.033
margin_bottom = -327.033
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="LabelTitle" type="Label" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -15.5
margin_right = 52.0
margin_bottom = 15.5
text = "Settings
"
align = 1

[node name="Buttons" type="Container" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -60.0
margin_right = 80.0
margin_bottom = 220.0
__meta__ = {
"_edit_group_": true
}

[node name="ButtonBack" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_right = 200.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Buttons/ButtonBack"]
margin_right = 400.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 6 )
text = "Back"
align = 1
valign = 1
uppercase = true

[node name="ButtonMusic" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 70.0
margin_right = 200.0
margin_bottom = 120.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Buttons/ButtonMusic"]
margin_right = 400.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 6 )
text = "Music: on"
align = 1
valign = 1
uppercase = true

[node name="ButtonSound" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 140.0
margin_right = 200.0
margin_bottom = 190.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Buttons/ButtonSound"]
margin_right = 400.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 6 )
text = "Sound: ON"
align = 1
valign = 1
uppercase = true

[node name="ButtonQuality" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 210.0
margin_right = 200.0
margin_bottom = 260.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Buttons/ButtonQuality"]
margin_right = 400.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 6 )
text = "Quality: High"
align = 1
valign = 1
uppercase = true

[node name="ButtonTouchpads" type="TextureButton" parent="Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = 220.0
margin_top = 210.0
margin_right = 620.0
margin_bottom = 260.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Buttons/ButtonTouchpads"]
margin_right = 400.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 6 )
text = "Touchpads: Fixed"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = 22.0
margin_right = 397.0
margin_bottom = 104.0
rect_min_size = Vector2( 128, 0 )
rect_scale = Vector2( 1, 1.8 )
custom_constants/separation = 24

[node name="SliderMusic" type="HSlider" parent="VBoxContainer2"]
margin_right = 325.0
margin_bottom = 15.0
custom_icons/tick = ExtResource( 7 )
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 8 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_disabled = SubResource( 2 )
custom_styles/grabber_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
value = 100.0
tick_count = 1
ticks_on_borders = true

[node name="SliderSound" type="HSlider" parent="VBoxContainer2"]
margin_top = 39.0
margin_right = 325.0
margin_bottom = 54.0
custom_icons/tick = ExtResource( 7 )
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 8 )
custom_icons/grabber = ExtResource( 7 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_disabled = SubResource( 7 )
custom_styles/grabber_highlight = SubResource( 8 )
custom_styles/grabber_area = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
value = 100.0
tick_count = 1
ticks_on_borders = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -24.0

[node name="LabelVersion" type="Label" parent="MarginContainer"]
margin_top = 5.0
margin_right = 67.0
margin_bottom = 19.0
grow_horizontal = 0
text = "v 0_0_0"
align = 1
valign = 1

[connection signal="pressed" from="Buttons/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="Buttons/ButtonMusic" to="." method="_on_ButtonMusic_pressed"]
[connection signal="pressed" from="Buttons/ButtonSound" to="." method="_on_ButtonSound_pressed"]
[connection signal="pressed" from="Buttons/ButtonQuality" to="." method="_on_ButtonQuality_pressed"]
[connection signal="pressed" from="Buttons/ButtonTouchpads" to="." method="_on_ButtonTouchpads_pressed"]
[connection signal="value_changed" from="VBoxContainer2/SliderMusic" to="." method="_on_SliderMusic_value_changed"]
[connection signal="value_changed" from="VBoxContainer2/SliderSound" to="." method="_on_SliderSound_value_changed"]
